fixing gh-page deploy errors

--- a/_posts/2020-09-09-blunder.md
+++ b/_posts/2020-09-09-blunder.md
@@ -74,7 +74,8 @@ potential username **fergus**
 
 ### POC Script
 
-[bludit_3.9.2-Bruteforce.py](exploit/bludit_3.9.2-Bruteforce.py)
+[bludit_3.9.2-Bruteforce.py](https://github.com/x00tex/hackTheBox/blob/main/Boxes/linux/Retired/blunder/exploit/bludit_3.9.2-Bruteforce.py)
+
 * [Wordlist](exploit/wordlist.txt) generated from webpage usubg cewl tool
 
 *ippsec [video](https://www.youtube.com/watch?v=G5iw8c2vXuk&t=940s)*
@@ -102,7 +103,7 @@ potential username **fergus**
   - Author: James Green
   - EDB-ID: [48701](https://www.exploit-db.com/exploits/48701)
 
-[Bludit_3.9.2-DirectoryTraversal.py](exploit/Bludit_3.9.2-DirectoryTraversal.py)
+[Bludit_3.9.2-DirectoryTraversal.py](https://github.com/x00tex/hackTheBox/blob/main/Boxes/linux/Retired/blunder/exploit/Bludit_3.9.2-DirectoryTraversal.py)
 
 *ippsec [video](https://www.youtube.com/watch?v=G5iw8c2vXuk&t=2460s)*
 
