--- a/_posts/2020-09-23-cache.md
+++ b/_posts/2020-09-23-cache.md
@@ -153,7 +153,7 @@ xxxxxx          openemr_admin
 
 ## User Authenticated RCE
 
-### using script [OpenEMR < 5.0.1 - (Authenticated) RCE](exploit/openEMR%3C5.0.1-Authenticated_RCE.py)
+### using script [OpenEMR < 5.0.1 - (Authenticated) RCE](https://github.com/x00tex/hackTheBox/blob/main/Boxes/linux/Retired/cache/exploit/openEMR-5.0.1-Authenticated_RCE.py)
 
 *ippsec [video](https://www.youtube.com/watch?v=kfLU5-Eeyhw&t=3360s)*
 
