--- a/_posts/2020-09-30-doctor.md
+++ b/_posts/2020-09-30-doctor.md
@@ -170,8 +170,8 @@ aaaab5f8************************
 
 # Local Enumeration
 
-- I already found a Auth RCE for [Splunk](README.md#splunk) so first i try to login with these cred in splunk on port 8089
-- login successful and i run that [exploit](exploit/SplunkWhisperer2_RCE.py)
+- I already found a Auth RCE for Splunk so first i try to login with these cred in splunk on port 8089
+- login successful and i run that [exploit](https://github.com/x00tex/hackTheBox/blob/main/Boxes/linux/Retired/doctor/exploit/SplunkWhisperer2_RCE.py)
 
 # Root Privesc
 
