--- a/_posts/2020-11-29-luanne.md
+++ b/_posts/2020-11-29-luanne.md
@@ -149,7 +149,7 @@ Session completed
 
 * login to port 80 worked but nothing interesting there,
 * and login to port 9001 not working.
-* home direcotry have a `r.michaels` user directory and r.michaels is a user -
+* home directory have a `r.michaels` user directory and r.michaels is a user -
 
 	  r.michaels:*:1000:100::/home/r.michaels:/bin/ksh
 
@@ -225,20 +225,11 @@ Session completed
 	  r.michaels  185  0.0  0.0  34996  2004 ?     Is    6:18AM 0:00.00 /usr/libexec/httpd -u -X -s -i 127.0.0.1 -I 3001 -L weather /home/r.michaels/devel/webapi/weather.lua -P /var/run/httpd_devel.pid -U r.michaels -b /home/r.michaels/devel/www 
 
 * and when testing for shared folder i found the user r.michaels ssh key's copy in the shared folder -
-```diff
+```html
 $ curl --user webapi_user:iamthebest "http://127.0.0.1:3001/~r.michaels/"
-  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
-                                 Dload  Upload   Total   Spent    Left  Speed
-100   601    0   601    0     0   195k      0 --:--:-- --:--:-- --:--:--  195k
-<!DOCTYPE html>
-<html><head><meta charset="utf-8"/>
-<style type="text/css">
-table {
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-}
-th { background: aquamarine; }
-tr:nth-child(even) { background: lavender; }
+
+... [snip] ...
+
 </style>
 <title>Index of ~r.michaels/</title></head>
 <body><h1>Index of ~r.michaels/</h1>
@@ -246,8 +237,8 @@ tr:nth-child(even) { background: lavender; }
 <thead>
 <tr><th>Name<th>Last modified<th align=right>Size
 <tbody>
-+<tr><td><a href="../">Parent Directory</a><td>16-Sep-2020 18:20<td align=right>1kB
-+<tr><td><a href="id_rsa">id_rsa</a><td>16-Sep-2020 16:52<td align=right>3kB
+<tr><td><a href="../">Parent Directory</a><td>16-Sep-2020 18:20<td align=right>1kB
+<tr><td><a href="id_rsa">id_rsa</a><td>16-Sep-2020 16:52<td align=right>3kB
 </table>
 </body></html>
 ```
