--- a/_posts/2021-05-27-schooled.md
+++ b/_posts/2021-05-27-schooled.md
@@ -284,7 +284,7 @@ User jamie may run the following commands on Schooled:
 
 user "jamie" can install any freebsd package with sudo.
 
-found exploit from [gtfobins](https://gtfobins.github.io/gtfobins/pkg/), *this is same as `sudo snap` on [armageddon box](../armageddon/README.md#snap-install-with-sudo)*.
+found exploit from [gtfobins](https://gtfobins.github.io/gtfobins/pkg/), *this is same as `sudo snap` on armageddon box.
 
 
 Create milicious package from fpm.
