--- a/_posts/2020-10-14-openkeyS.md
+++ b/_posts/2020-10-14-openkeyS.md
@@ -58,7 +58,7 @@ Running (JUST GUESSING): OpenBSD 4.X|6.X|5.X|3.X (95%)
 
 	`vim -r auth.php.swp`
 	
-  **Inside [auth.php](dump/auth.php) file**	
+  **Inside auth.php file**	
 
 	  function authenticate($username, $password)
 	  {
@@ -74,7 +74,7 @@ Running (JUST GUESSING): OpenBSD 4.X|6.X|5.X|3.X (95%)
 
 	    -rw-r--r-- 1 x00tex x00tex 12288 Oct 14 10:21 check_auth
 
-* **[check_auth](dump/check_auth) file**
+* **check_auth file**
 
 * file is not executing in linux because it made form OpenBSD.
 * i search for `OpenBSD check_auth` and found Authentication Bypass and Local Privilege Escalation Vulnerabilities.
@@ -92,7 +92,7 @@ Running (JUST GUESSING): OpenBSD 4.X|6.X|5.X|3.X (95%)
 
 	  OpenSSH key not found for user "-schallenge"
 	  
-* in [auth.php](dump/auth.php) script, there are some session variables defined that applicable in session cookie.
+* in auth.php script, there are some session variables defined that applicable in session cookie.
 
 	  function init_session()
 	  {
