fixing gh-page deploy errors

--- a/_posts/2020-09-09-blunder.md
+++ b/_posts/2020-09-09-blunder.md
@@ -76,7 +76,7 @@ potential username **fergus**
 
 [bludit_3.9.2-Bruteforce.py](https://github.com/x00tex/hackTheBox/blob/main/Boxes/linux/Retired/blunder/exploit/bludit_3.9.2-Bruteforce.py)
 
-* [Wordlist](exploit/wordlist.txt) generated from webpage usubg cewl tool
+* Wordlist generated from webpage usubg cewl tool
 
 *ippsec [video](https://www.youtube.com/watch?v=G5iw8c2vXuk&t=940s)*
 
