--- a/_posts/2020-11-29-luanne.md
+++ b/_posts/2020-11-29-luanne.md
@@ -225,23 +225,11 @@ Session completed
 	  r.michaels  185  0.0  0.0  34996  2004 ?     Is    6:18AM 0:00.00 /usr/libexec/httpd -u -X -s -i 127.0.0.1 -I 3001 -L weather /home/r.michaels/devel/webapi/weather.lua -P /var/run/httpd_devel.pid -U r.michaels -b /home/r.michaels/devel/www 
 
 * and when testing for shared folder i found the user r.michaels ssh key's copy in the shared folder -
-```html
+```bash
 $ curl --user webapi_user:iamthebest "http://127.0.0.1:3001/~r.michaels/"
-
-... [snip] ...
-
-</style>
-<title>Index of ~r.michaels/</title></head>
-<body><h1>Index of ~r.michaels/</h1>
-<table cols=3>
-<thead>
-<tr><th>Name<th>Last modified<th align=right>Size
-<tbody>
-<tr><td><a href="../">Parent Directory</a><td>16-Sep-2020 18:20<td align=right>1kB
-<tr><td><a href="id_rsa">id_rsa</a><td>16-Sep-2020 16:52<td align=right>3kB
-</table>
-</body></html>
 ```
+
+![](/assets/img/posts/luanne/html-rspn.png)
 
 ## USER:r.michaels shell
 
