updated with pandora and timing write-ups

--- a/_posts/2021-12-14-writer.md
+++ b/_posts/2021-12-14-writer.md
@@ -54,7 +54,7 @@ One in `/dashboard/settings`
 
 And Second in `/dashboard/stories/add`
 
-![](/assets/img/posts/writer/file-upload-stories.png.png)
+![](/assets/img/posts/writer/file-upload-stories.png)
 
 adding a stories also have url option in place of file upload.
 
