fixing deploy error

--- a/_posts/2022-05-11-pandora.md
+++ b/_posts/2022-05-11-pandora.md
@@ -44,7 +44,7 @@ PORT    STATE         SERVICE
 
 ## enumerating SNMP
 
-* Check [htbBox:pit](../pit/README.md#snmp-enumeration) for detail information on SNMP
+* Check pit box write-up for detail information on SNMP
 
 after running for a while, `snmpwalk` found some strings from "[hrSWRunParameters](https://cric.grenoble.cnrs.fr/Administrateurs/Outils/MIBS/?oid=1.3.6.1.2.1.25.4.2.1.5)" in which found some creds.
 ```bash
